name:     condition
version:  0.0.0
synopsis: Condition variables for Haskell

description:
  Condition variables for haskell implemented on top of MVars.

license:       LGPL
license-file:  LICENSE
author:        Aliaksiej Artamonaŭ
maintainer:    aliaksiej.artamonau@gmail.com
build-type:    Simple
cabal-version: >= 1.6
homepage:      http://github.com/shaleny/haskell-condition
category:      Concurrency

extra-source-files:
  LICENSE

Library
  hs-source-dirs: src

  exposed-modules:
    Control.Concurrent.Condition

  build-depends:
    base

  if impl(ghc >= 6.12.0)
    ghc-options: -Wall -fwarn-tabs -O2
                 -fno-warn-unused-do-bind
  else
    ghc-options: -Wall -fwarn-tabs -O2

source-repository head
  type:     git
  location: git://github.com/shaleny/haskell-condition.git